# hgis-heritage-gis

./: .gitignore  CLAUDE.md  CMakeLists.txt  HGIS_Plan.md  MCP_QUICK_REFERENCE.md  README.md  WORKFLOW.md  claude-settings-example.json  requirements.txt  setup-alias.sh  개발시작.sh
.github/workflows/: ci.yml
python/: build_python.py  sipconfig.py  test_bindings.py
python/core/: HGISApplication.sip  HGISCoordinateReferenceSystem.sip  HGISCoordinateTransform.sip  HGISLayerManager.sip  HGISMapLayer.sip  HGISVectorLayer.sip  core.sip
python/hgis/: __init__.py
python/hgis/heritage/: __init__.py  data_model.py  standards.py  validator.py
python/hgis/layout/: __init__.py  manager.py
resources/: resources.qrc
resources/styles/: dark_theme.qss
resources/translations/: hgis_ko.qm  hgis_ko.ts
scripts/: check-environment.sh  create-snapshot.sh  restore-snapshot.sh  sync-context.sh
src/app/: CMakeLists.txt  hgisapp.cpp  hgisapp.h  main.cpp
src/core/: CMakeLists.txt  HGISApplication.cpp  HGISApplication.h  HGISCoordinateReferenceSystem.cpp  HGISCoordinateReferenceSystem.h  HGISCoordinateTransform.cpp  HGISCoordinateTransform.h  HGISLayerManager.cpp  HGISLayerManager.h  HGISMapCanvas.cpp  HGISMapCanvas.h  HGISMapLayer.cpp  HGISMapLayer.h  HGISVectorLayer.cpp  HGISVectorLayer.h
src/gui/: CMakeLists.txt  HGISCrsSelectionDialog.cpp  HGISCrsSelectionDialog.h  HGISMainWindow.cpp  HGISMainWindow.h  HGISMapCanvas.cpp  HGISMapCanvas.h
src/providers/: CMakeLists.txt  HGISGdalProvider.cpp  HGISGdalProvider.h
workflows/: hgis-development.yml
